// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`application overview should render correctly 1`] = `
<Memo(BranchOverviewRenderer)
  analyses={
    Array [
      Object {
        "date": "2017-03-01T09:36:01+0100",
        "events": Array [],
        "key": "foo",
        "projectVersion": "1.0",
      },
      Object {
        "date": "2017-03-01T09:36:01+0100",
        "events": Array [],
        "key": "foo",
        "projectVersion": "1.0",
      },
      Object {
        "date": "2017-03-01T09:36:01+0100",
        "events": Array [],
        "key": "foo",
        "projectVersion": "1.0",
      },
      Object {
        "date": "2017-03-01T09:36:01+0100",
        "events": Array [],
        "key": "foo",
        "projectVersion": "1.0",
      },
      Object {
        "date": "2017-03-01T09:36:01+0100",
        "events": Array [],
        "key": "foo",
        "projectVersion": "1.0",
      },
    ]
  }
  branchLike={
    Object {
      "analysisDate": "2018-01-01",
      "excludedFromPurge": true,
      "isMain": true,
      "name": "master",
    }
  }
  component={
    Object {
      "breadcrumbs": Array [
        Object {
          "breadcrumbs": Array [],
          "key": "foo",
          "name": "MyProject",
          "organization": "foo",
          "qualifier": "APP",
          "qualityGate": Object {
            "isDefault": true,
            "key": "30",
            "name": "Sonar way",
          },
          "qualityProfiles": Array [
            Object {
              "deleted": false,
              "key": "my-qp",
              "language": "ts",
              "name": "Sonar way",
            },
          ],
          "tags": Array [],
        },
      ],
      "key": "my-project",
      "name": "MyProject",
      "organization": "foo",
      "qualifier": "APP",
      "qualityGate": Object {
        "isDefault": true,
        "key": "30",
        "name": "Sonar way",
      },
      "qualityProfiles": Array [
        Object {
          "deleted": false,
          "key": "my-qp",
          "language": "ts",
          "name": "Sonar way",
        },
      ],
      "tags": Array [],
    }
  }
  graph="coverage"
  leakPeriod={
    Object {
      "date": "2017-01-05",
      "project": "foo",
      "projectName": "Foo",
    }
  }
  loadingHistory={false}
  loadingStatus={false}
  measures={
    Array [
      Object {
        "bestValue": true,
        "metric": Object {
          "id": "alert_status",
          "key": "alert_status",
          "name": "alert_status",
          "type": "INT",
        },
        "periods": undefined,
        "value": "1.0",
      },
      Object {
        "bestValue": true,
        "metric": Object {
          "id": "quality_gate_details",
          "key": "quality_gate_details",
          "name": "quality_gate_details",
          "type": "INT",
        },
        "periods": undefined,
        "value": "1.0",
      },
      Object {
        "bestValue": true,
        "metric": Object {
          "id": "bugs",
          "key": "bugs",
          "name": "bugs",
          "type": "INT",
        },
        "periods": undefined,
        "value": "1.0",
      },
      Object {
        "bestValue": true,
        "leak": "1",
        "metric": Object {
          "id": "new_bugs",
          "key": "new_bugs",
          "name": "new_bugs",
          "type": "INT",
        },
        "periods": Array [
          Object {
            "bestValue": true,
            "index": 1,
            "value": "1.0",
          },
        ],
        "value": "1.0",
      },
      Object {
        "bestValue": true,
        "metric": Object {
          "id": "reliability_rating",
          "key": "reliability_rating",
          "name": "reliability_rating",
          "type": "RATING",
        },
        "periods": undefined,
        "value": "1.0",
      },
      Object {
        "bestValue": true,
        "leak": "1",
        "metric": Object {
          "id": "new_reliability_rating",
          "key": "new_reliability_rating",
          "name": "new_reliability_rating",
          "type": "RATING",
        },
        "periods": Array [
          Object {
            "bestValue": true,
            "index": 1,
            "value": "1.0",
          },
        ],
        "value": "1.0",
      },
      Object {
        "bestValue": true,
        "metric": Object {
          "id": "vulnerabilities",
          "key": "vulnerabilities",
          "name": "vulnerabilities",
          "type": "INT",
        },
        "periods": undefined,
        "value": "1.0",
      },
      Object {
        "bestValue": true,
        "leak": "1",
        "metric": Object {
          "id": "new_vulnerabilities",
          "key": "new_vulnerabilities",
          "name": "new_vulnerabilities",
          "type": "INT",
        },
        "periods": Array [
          Object {
            "bestValue": true,
            "index": 1,
            "value": "1.0",
          },
        ],
        "value": "1.0",
      },
      Object {
        "bestValue": true,
        "metric": Object {
          "id": "security_rating",
          "key": "security_rating",
          "name": "security_rating",
          "type": "RATING",
        },
        "periods": undefined,
        "value": "1.0",
      },
      Object {
        "bestValue": true,
        "leak": "1",
        "metric": Object {
          "id": "new_security_rating",
          "key": "new_security_rating",
          "name": "new_security_rating",
          "type": "RATING",
        },
        "periods": Array [
          Object {
            "bestValue": true,
            "index": 1,
            "value": "1.0",
          },
        ],
        "value": "1.0",
      },
      Object {
        "bestValue": true,
        "metric": Object {
          "id": "security_hotspots",
          "key": "security_hotspots",
          "name": "security_hotspots",
          "type": "INT",
        },
        "periods": undefined,
        "value": "1.0",
      },
      Object {
        "bestValue": true,
        "leak": "1",
        "metric": Object {
          "id": "new_security_hotspots",
          "key": "new_security_hotspots",
          "name": "new_security_hotspots",
          "type": "INT",
        },
        "periods": Array [
          Object {
            "bestValue": true,
            "index": 1,
            "value": "1.0",
          },
        ],
        "value": "1.0",
      },
      Object {
        "bestValue": true,
        "metric": Object {
          "id": "security_hotspots_reviewed",
          "key": "security_hotspots_reviewed",
          "name": "security_hotspots_reviewed",
          "type": "INT",
        },
        "periods": undefined,
        "value": "1.0",
      },
      Object {
        "bestValue": true,
        "leak": "1",
        "metric": Object {
          "id": "new_security_hotspots_reviewed",
          "key": "new_security_hotspots_reviewed",
          "name": "new_security_hotspots_reviewed",
          "type": "INT",
        },
        "periods": Array [
          Object {
            "bestValue": true,
            "index": 1,
            "value": "1.0",
          },
        ],
        "value": "1.0",
      },
      Object {
        "bestValue": true,
        "metric": Object {
          "id": "security_review_rating",
          "key": "security_review_rating",
          "name": "security_review_rating",
          "type": "RATING",
        },
        "periods": undefined,
        "value": "1.0",
      },
      Object {
        "bestValue": true,
        "leak": "1",
        "metric": Object {
          "id": "new_security_review_rating",
          "key": "new_security_review_rating",
          "name": "new_security_review_rating",
          "type": "RATING",
        },
        "periods": Array [
          Object {
            "bestValue": true,
            "index": 1,
            "value": "1.0",
          },
        ],
        "value": "1.0",
      },
      Object {
        "bestValue": true,
        "metric": Object {
          "id": "code_smells",
          "key": "code_smells",
          "name": "code_smells",
          "type": "INT",
        },
        "periods": undefined,
        "value": "1.0",
      },
      Object {
        "bestValue": true,
        "leak": "1",
        "metric": Object {
          "id": "new_code_smells",
          "key": "new_code_smells",
          "name": "new_code_smells",
          "type": "INT",
        },
        "periods": Array [
          Object {
            "bestValue": true,
            "index": 1,
            "value": "1.0",
          },
        ],
        "value": "1.0",
      },
      Object {
        "bestValue": true,
        "metric": Object {
          "id": "sqale_rating",
          "key": "sqale_rating",
          "name": "sqale_rating",
          "type": "RATING",
        },
        "periods": undefined,
        "value": "1.0",
      },
      Object {
        "bestValue": true,
        "leak": "1",
        "metric": Object {
          "id": "new_maintainability_rating",
          "key": "new_maintainability_rating",
          "name": "new_maintainability_rating",
          "type": "RATING",
        },
        "periods": Array [
          Object {
            "bestValue": true,
            "index": 1,
            "value": "1.0",
          },
        ],
        "value": "1.0",
      },
      Object {
        "bestValue": true,
        "metric": Object {
          "id": "sqale_index",
          "key": "sqale_index",
          "name": "sqale_index",
          "type": "INT",
        },
        "periods": undefined,
        "value": "1.0",
      },
      Object {
        "bestValue": true,
        "leak": "1",
        "metric": Object {
          "id": "new_technical_debt",
          "key": "new_technical_debt",
          "name": "new_technical_debt",
          "type": "INT",
        },
        "periods": Array [
          Object {
            "bestValue": true,
            "index": 1,
            "value": "1.0",
          },
        ],
        "value": "1.0",
      },
      Object {
        "bestValue": true,
        "metric": Object {
          "id": "coverage",
          "key": "coverage",
          "name": "coverage",
          "type": "PERCENT",
        },
        "periods": undefined,
        "value": "1.0",
      },
      Object {
        "bestValue": true,
        "leak": "1",
        "metric": Object {
          "id": "new_coverage",
          "key": "new_coverage",
          "name": "new_coverage",
          "type": "PERCENT",
        },
        "periods": Array [
          Object {
            "bestValue": true,
            "index": 1,
            "value": "1.0",
          },
        ],
        "value": "1.0",
      },
      Object {
        "bestValue": true,
        "metric": Object {
          "id": "lines_to_cover",
          "key": "lines_to_cover",
          "name": "lines_to_cover",
          "type": "INT",
        },
        "periods": undefined,
        "value": "1.0",
      },
      Object {
        "bestValue": true,
        "leak": "1",
        "metric": Object {
          "id": "new_lines_to_cover",
          "key": "new_lines_to_cover",
          "name": "new_lines_to_cover",
          "type": "INT",
        },
        "periods": Array [
          Object {
            "bestValue": true,
            "index": 1,
            "value": "1.0",
          },
        ],
        "value": "1.0",
      },
      Object {
        "bestValue": true,
        "metric": Object {
          "id": "tests",
          "key": "tests",
          "name": "tests",
          "type": "INT",
        },
        "periods": undefined,
        "value": "1.0",
      },
      Object {
        "bestValue": true,
        "metric": Object {
          "id": "duplicated_lines_density",
          "key": "duplicated_lines_density",
          "name": "duplicated_lines_density",
          "type": "INT",
        },
        "periods": undefined,
        "value": "1.0",
      },
      Object {
        "bestValue": true,
        "leak": "1",
        "metric": Object {
          "id": "new_duplicated_lines_density",
          "key": "new_duplicated_lines_density",
          "name": "new_duplicated_lines_density",
          "type": "INT",
        },
        "periods": Array [
          Object {
            "bestValue": true,
            "index": 1,
            "value": "1.0",
          },
        ],
        "value": "1.0",
      },
      Object {
        "bestValue": true,
        "metric": Object {
          "id": "duplicated_blocks",
          "key": "duplicated_blocks",
          "name": "duplicated_blocks",
          "type": "INT",
        },
        "periods": undefined,
        "value": "1.0",
      },
      Object {
        "bestValue": true,
        "metric": Object {
          "id": "ncloc",
          "key": "ncloc",
          "name": "ncloc",
          "type": "INT",
        },
        "periods": undefined,
        "value": "1.0",
      },
      Object {
        "bestValue": true,
        "metric": Object {
          "id": "ncloc_language_distribution",
          "key": "ncloc_language_distribution",
          "name": "ncloc_language_distribution",
          "type": "INT",
        },
        "periods": undefined,
        "value": "1.0",
      },
      Object {
        "bestValue": true,
        "metric": Object {
          "id": "projects",
          "key": "projects",
          "name": "projects",
          "type": "INT",
        },
        "periods": undefined,
        "value": "1.0",
      },
      Object {
        "bestValue": true,
        "metric": Object {
          "id": "lines",
          "key": "lines",
          "name": "lines",
          "type": "INT",
        },
        "periods": undefined,
        "value": "1.0",
      },
      Object {
        "bestValue": true,
        "leak": "1",
        "metric": Object {
          "id": "new_lines",
          "key": "new_lines",
          "name": "new_lines",
          "type": "INT",
        },
        "periods": Array [
          Object {
            "bestValue": true,
            "index": 1,
            "value": "1.0",
          },
        ],
        "value": "1.0",
      },
    ]
  }
  measuresHistory={
    Array [
      Object {
        "history": Array [
          Object {
            "date": "PARSED:2019-01-05",
            "value": "2.0",
          },
        ],
        "metric": "bugs",
      },
      Object {
        "history": Array [
          Object {
            "date": "PARSED:2019-01-05",
            "value": "0",
          },
        ],
        "metric": "vulnerabilities",
      },
      Object {
        "history": Array [
          Object {
            "date": "PARSED:2019-01-01",
            "value": "1.0",
          },
        ],
        "metric": "sqale_index",
      },
      Object {
        "history": Array [
          Object {
            "date": "PARSED:2019-01-02",
            "value": "1.0",
          },
        ],
        "metric": "duplicated_lines_density",
      },
      Object {
        "history": Array [
          Object {
            "date": "PARSED:2019-01-03",
            "value": "10000",
          },
        ],
        "metric": "ncloc",
      },
      Object {
        "history": Array [
          Object {
            "date": "PARSED:2019-01-04",
            "value": "95.5",
          },
        ],
        "metric": "coverage",
      },
    ]
  }
  metrics={
    Array [
      Object {
        "id": "alert_status",
        "key": "alert_status",
        "name": "alert_status",
        "type": "INT",
      },
      Object {
        "id": "quality_gate_details",
        "key": "quality_gate_details",
        "name": "quality_gate_details",
        "type": "INT",
      },
      Object {
        "id": "bugs",
        "key": "bugs",
        "name": "bugs",
        "type": "INT",
      },
      Object {
        "id": "new_bugs",
        "key": "new_bugs",
        "name": "new_bugs",
        "type": "INT",
      },
      Object {
        "id": "reliability_rating",
        "key": "reliability_rating",
        "name": "reliability_rating",
        "type": "RATING",
      },
      Object {
        "id": "new_reliability_rating",
        "key": "new_reliability_rating",
        "name": "new_reliability_rating",
        "type": "RATING",
      },
      Object {
        "id": "vulnerabilities",
        "key": "vulnerabilities",
        "name": "vulnerabilities",
        "type": "INT",
      },
      Object {
        "id": "new_vulnerabilities",
        "key": "new_vulnerabilities",
        "name": "new_vulnerabilities",
        "type": "INT",
      },
      Object {
        "id": "security_rating",
        "key": "security_rating",
        "name": "security_rating",
        "type": "RATING",
      },
      Object {
        "id": "new_security_rating",
        "key": "new_security_rating",
        "name": "new_security_rating",
        "type": "RATING",
      },
      Object {
        "id": "security_hotspots",
        "key": "security_hotspots",
        "name": "security_hotspots",
        "type": "INT",
      },
      Object {
        "id": "new_security_hotspots",
        "key": "new_security_hotspots",
        "name": "new_security_hotspots",
        "type": "INT",
      },
      Object {
        "id": "security_hotspots_reviewed",
        "key": "security_hotspots_reviewed",
        "name": "security_hotspots_reviewed",
        "type": "INT",
      },
      Object {
        "id": "new_security_hotspots_reviewed",
        "key": "new_security_hotspots_reviewed",
        "name": "new_security_hotspots_reviewed",
        "type": "INT",
      },
      Object {
        "id": "security_review_rating",
        "key": "security_review_rating",
        "name": "security_review_rating",
        "type": "RATING",
      },
      Object {
        "id": "new_security_review_rating",
        "key": "new_security_review_rating",
        "name": "new_security_review_rating",
        "type": "RATING",
      },
      Object {
        "id": "code_smells",
        "key": "code_smells",
        "name": "code_smells",
        "type": "INT",
      },
      Object {
        "id": "new_code_smells",
        "key": "new_code_smells",
        "name": "new_code_smells",
        "type": "INT",
      },
      Object {
        "id": "sqale_rating",
        "key": "sqale_rating",
        "name": "sqale_rating",
        "type": "RATING",
      },
      Object {
        "id": "new_maintainability_rating",
        "key": "new_maintainability_rating",
        "name": "new_maintainability_rating",
        "type": "RATING",
      },
      Object {
        "id": "sqale_index",
        "key": "sqale_index",
        "name": "sqale_index",
        "type": "INT",
      },
      Object {
        "id": "new_technical_debt",
        "key": "new_technical_debt",
        "name": "new_technical_debt",
        "type": "INT",
      },
      Object {
        "id": "coverage",
        "key": "coverage",
        "name": "coverage",
        "type": "PERCENT",
      },
      Object {
        "id": "new_coverage",
        "key": "new_coverage",
        "name": "new_coverage",
        "type": "PERCENT",
      },
      Object {
        "id": "lines_to_cover",
        "key": "lines_to_cover",
        "name": "lines_to_cover",
        "type": "INT",
      },
      Object {
        "id": "new_lines_to_cover",
        "key": "new_lines_to_cover",
        "name": "new_lines_to_cover",
        "type": "INT",
      },
      Object {
        "id": "tests",
        "key": "tests",
        "name": "tests",
        "type": "INT",
      },
      Object {
        "id": "duplicated_lines_density",
        "key": "duplicated_lines_density",
        "name": "duplicated_lines_density",
        "type": "INT",
      },
      Object {
        "id": "new_duplicated_lines_density",
        "key": "new_duplicated_lines_density",
        "name": "new_duplicated_lines_density",
        "type": "INT",
      },
      Object {
        "id": "duplicated_blocks",
        "key": "duplicated_blocks",
        "name": "duplicated_blocks",
        "type": "INT",
      },
      Object {
        "id": "ncloc",
        "key": "ncloc",
        "name": "ncloc",
        "type": "INT",
      },
      Object {
        "id": "ncloc_language_distribution",
        "key": "ncloc_language_distribution",
        "name": "ncloc_language_distribution",
        "type": "INT",
      },
      Object {
        "id": "projects",
        "key": "projects",
        "name": "projects",
        "type": "INT",
      },
      Object {
        "id": "lines",
        "key": "lines",
        "name": "lines",
        "type": "INT",
      },
      Object {
        "id": "new_lines",
        "key": "new_lines",
        "name": "new_lines",
        "type": "INT",
      },
    ]
  }
  onGraphChange={[Function]}
  projectIsEmpty={false}
  qgStatuses={
    Array [
      Object {
        "failedConditions": Array [
          Object {
            "actual": "10",
            "error": "1.0",
            "level": "ERROR",
            "measure": Object {
              "bestValue": true,
              "metric": Object {
                "id": "coverage",
                "key": "coverage",
                "name": "coverage",
                "type": "PERCENT",
              },
              "periods": undefined,
              "value": "1.0",
            },
            "metric": "coverage",
            "op": "GT",
            "period": undefined,
          },
          Object {
            "actual": "5",
            "error": "1.0",
            "level": "ERROR",
            "measure": Object {
              "bestValue": true,
              "leak": "1",
              "metric": Object {
                "id": "new_bugs",
                "key": "new_bugs",
                "name": "new_bugs",
                "type": "INT",
              },
              "periods": Array [
                Object {
                  "bestValue": true,
                  "index": 1,
                  "value": "1.0",
                },
              ],
              "value": "1.0",
            },
            "metric": "new_bugs",
            "op": "GT",
            "period": 1,
          },
        ],
        "key": "foo",
        "name": "Foo",
        "status": "ERROR",
      },
      Object {
        "failedConditions": Array [
          Object {
            "actual": "15",
            "error": "5.0",
            "level": "ERROR",
            "measure": Object {
              "bestValue": true,
              "leak": "1",
              "metric": Object {
                "id": "new_bugs",
                "key": "new_bugs",
                "name": "new_bugs",
                "type": "INT",
              },
              "periods": Array [
                Object {
                  "bestValue": true,
                  "index": 1,
                  "value": "1.0",
                },
              ],
              "value": "1.0",
            },
            "metric": "new_bugs",
            "op": "GT",
            "period": 1,
          },
        ],
        "key": "bar",
        "name": "Bar",
        "status": "ERROR",
      },
    ]
  }
/>
`;

exports[`project overview should render correctly 1`] = `
<Memo(BranchOverviewRenderer)
  analyses={
    Array [
      Object {
        "date": "2017-03-01T09:36:01+0100",
        "events": Array [],
        "key": "foo",
        "projectVersion": "1.0",
      },
      Object {
        "date": "2017-03-01T09:36:01+0100",
        "events": Array [],
        "key": "foo",
        "projectVersion": "1.0",
      },
      Object {
        "date": "2017-03-01T09:36:01+0100",
        "events": Array [],
        "key": "foo",
        "projectVersion": "1.0",
      },
      Object {
        "date": "2017-03-01T09:36:01+0100",
        "events": Array [],
        "key": "foo",
        "projectVersion": "1.0",
      },
      Object {
        "date": "2017-03-01T09:36:01+0100",
        "events": Array [],
        "key": "foo",
        "projectVersion": "1.0",
      },
    ]
  }
  branchLike={
    Object {
      "analysisDate": "2018-01-01",
      "excludedFromPurge": true,
      "isMain": true,
      "name": "master",
    }
  }
  component={
    Object {
      "breadcrumbs": Array [
        Object {
          "breadcrumbs": Array [],
          "key": "foo",
          "name": "MyProject",
          "organization": "foo",
          "qualifier": "TRK",
          "qualityGate": Object {
            "isDefault": true,
            "key": "30",
            "name": "Sonar way",
          },
          "qualityProfiles": Array [
            Object {
              "deleted": false,
              "key": "my-qp",
              "language": "ts",
              "name": "Sonar way",
            },
          ],
          "tags": Array [],
        },
      ],
      "key": "foo",
      "name": "Foo",
      "organization": "foo",
      "qualifier": "TRK",
      "qualityGate": Object {
        "isDefault": true,
        "key": "30",
        "name": "Sonar way",
      },
      "qualityProfiles": Array [
        Object {
          "deleted": false,
          "key": "my-qp",
          "language": "ts",
          "name": "Sonar way",
        },
      ],
      "tags": Array [],
    }
  }
  graph="coverage"
  loadingHistory={false}
  loadingStatus={false}
  measures={
    Array [
      Object {
        "bestValue": true,
        "metric": Object {
          "id": "alert_status",
          "key": "alert_status",
          "name": "alert_status",
          "type": "INT",
        },
        "periods": undefined,
        "value": "1.0",
      },
      Object {
        "bestValue": true,
        "metric": Object {
          "id": "quality_gate_details",
          "key": "quality_gate_details",
          "name": "quality_gate_details",
          "type": "INT",
        },
        "periods": undefined,
        "value": "1.0",
      },
      Object {
        "bestValue": true,
        "metric": Object {
          "id": "bugs",
          "key": "bugs",
          "name": "bugs",
          "type": "INT",
        },
        "periods": undefined,
        "value": "1.0",
      },
      Object {
        "bestValue": true,
        "leak": "1",
        "metric": Object {
          "id": "new_bugs",
          "key": "new_bugs",
          "name": "new_bugs",
          "type": "INT",
        },
        "periods": Array [
          Object {
            "bestValue": true,
            "index": 1,
            "value": "1.0",
          },
        ],
        "value": "1.0",
      },
      Object {
        "bestValue": true,
        "metric": Object {
          "id": "reliability_rating",
          "key": "reliability_rating",
          "name": "reliability_rating",
          "type": "RATING",
        },
        "periods": undefined,
        "value": "1.0",
      },
      Object {
        "bestValue": true,
        "leak": "1",
        "metric": Object {
          "id": "new_reliability_rating",
          "key": "new_reliability_rating",
          "name": "new_reliability_rating",
          "type": "RATING",
        },
        "periods": Array [
          Object {
            "bestValue": true,
            "index": 1,
            "value": "1.0",
          },
        ],
        "value": "1.0",
      },
      Object {
        "bestValue": true,
        "metric": Object {
          "id": "vulnerabilities",
          "key": "vulnerabilities",
          "name": "vulnerabilities",
          "type": "INT",
        },
        "periods": undefined,
        "value": "1.0",
      },
      Object {
        "bestValue": true,
        "leak": "1",
        "metric": Object {
          "id": "new_vulnerabilities",
          "key": "new_vulnerabilities",
          "name": "new_vulnerabilities",
          "type": "INT",
        },
        "periods": Array [
          Object {
            "bestValue": true,
            "index": 1,
            "value": "1.0",
          },
        ],
        "value": "1.0",
      },
      Object {
        "bestValue": true,
        "metric": Object {
          "id": "security_rating",
          "key": "security_rating",
          "name": "security_rating",
          "type": "RATING",
        },
        "periods": undefined,
        "value": "1.0",
      },
      Object {
        "bestValue": true,
        "leak": "1",
        "metric": Object {
          "id": "new_security_rating",
          "key": "new_security_rating",
          "name": "new_security_rating",
          "type": "RATING",
        },
        "periods": Array [
          Object {
            "bestValue": true,
            "index": 1,
            "value": "1.0",
          },
        ],
        "value": "1.0",
      },
      Object {
        "bestValue": true,
        "metric": Object {
          "id": "security_hotspots",
          "key": "security_hotspots",
          "name": "security_hotspots",
          "type": "INT",
        },
        "periods": undefined,
        "value": "1.0",
      },
      Object {
        "bestValue": true,
        "leak": "1",
        "metric": Object {
          "id": "new_security_hotspots",
          "key": "new_security_hotspots",
          "name": "new_security_hotspots",
          "type": "INT",
        },
        "periods": Array [
          Object {
            "bestValue": true,
            "index": 1,
            "value": "1.0",
          },
        ],
        "value": "1.0",
      },
      Object {
        "bestValue": true,
        "metric": Object {
          "id": "security_hotspots_reviewed",
          "key": "security_hotspots_reviewed",
          "name": "security_hotspots_reviewed",
          "type": "INT",
        },
        "periods": undefined,
        "value": "1.0",
      },
      Object {
        "bestValue": true,
        "leak": "1",
        "metric": Object {
          "id": "new_security_hotspots_reviewed",
          "key": "new_security_hotspots_reviewed",
          "name": "new_security_hotspots_reviewed",
          "type": "INT",
        },
        "periods": Array [
          Object {
            "bestValue": true,
            "index": 1,
            "value": "1.0",
          },
        ],
        "value": "1.0",
      },
      Object {
        "bestValue": true,
        "metric": Object {
          "id": "security_review_rating",
          "key": "security_review_rating",
          "name": "security_review_rating",
          "type": "RATING",
        },
        "periods": undefined,
        "value": "1.0",
      },
      Object {
        "bestValue": true,
        "leak": "1",
        "metric": Object {
          "id": "new_security_review_rating",
          "key": "new_security_review_rating",
          "name": "new_security_review_rating",
          "type": "RATING",
        },
        "periods": Array [
          Object {
            "bestValue": true,
            "index": 1,
            "value": "1.0",
          },
        ],
        "value": "1.0",
      },
      Object {
        "bestValue": true,
        "metric": Object {
          "id": "code_smells",
          "key": "code_smells",
          "name": "code_smells",
          "type": "INT",
        },
        "periods": undefined,
        "value": "1.0",
      },
      Object {
        "bestValue": true,
        "leak": "1",
        "metric": Object {
          "id": "new_code_smells",
          "key": "new_code_smells",
          "name": "new_code_smells",
          "type": "INT",
        },
        "periods": Array [
          Object {
            "bestValue": true,
            "index": 1,
            "value": "1.0",
          },
        ],
        "value": "1.0",
      },
      Object {
        "bestValue": true,
        "metric": Object {
          "id": "sqale_rating",
          "key": "sqale_rating",
          "name": "sqale_rating",
          "type": "RATING",
        },
        "periods": undefined,
        "value": "1.0",
      },
      Object {
        "bestValue": true,
        "leak": "1",
        "metric": Object {
          "id": "new_maintainability_rating",
          "key": "new_maintainability_rating",
          "name": "new_maintainability_rating",
          "type": "RATING",
        },
        "periods": Array [
          Object {
            "bestValue": true,
            "index": 1,
            "value": "1.0",
          },
        ],
        "value": "1.0",
      },
      Object {
        "bestValue": true,
        "metric": Object {
          "id": "sqale_index",
          "key": "sqale_index",
          "name": "sqale_index",
          "type": "INT",
        },
        "periods": undefined,
        "value": "1.0",
      },
      Object {
        "bestValue": true,
        "leak": "1",
        "metric": Object {
          "id": "new_technical_debt",
          "key": "new_technical_debt",
          "name": "new_technical_debt",
          "type": "INT",
        },
        "periods": Array [
          Object {
            "bestValue": true,
            "index": 1,
            "value": "1.0",
          },
        ],
        "value": "1.0",
      },
      Object {
        "bestValue": true,
        "metric": Object {
          "id": "coverage",
          "key": "coverage",
          "name": "coverage",
          "type": "PERCENT",
        },
        "periods": undefined,
        "value": "1.0",
      },
      Object {
        "bestValue": true,
        "leak": "1",
        "metric": Object {
          "id": "new_coverage",
          "key": "new_coverage",
          "name": "new_coverage",
          "type": "PERCENT",
        },
        "periods": Array [
          Object {
            "bestValue": true,
            "index": 1,
            "value": "1.0",
          },
        ],
        "value": "1.0",
      },
      Object {
        "bestValue": true,
        "metric": Object {
          "id": "lines_to_cover",
          "key": "lines_to_cover",
          "name": "lines_to_cover",
          "type": "INT",
        },
        "periods": undefined,
        "value": "1.0",
      },
      Object {
        "bestValue": true,
        "leak": "1",
        "metric": Object {
          "id": "new_lines_to_cover",
          "key": "new_lines_to_cover",
          "name": "new_lines_to_cover",
          "type": "INT",
        },
        "periods": Array [
          Object {
            "bestValue": true,
            "index": 1,
            "value": "1.0",
          },
        ],
        "value": "1.0",
      },
      Object {
        "bestValue": true,
        "metric": Object {
          "id": "tests",
          "key": "tests",
          "name": "tests",
          "type": "INT",
        },
        "periods": undefined,
        "value": "1.0",
      },
      Object {
        "bestValue": true,
        "metric": Object {
          "id": "duplicated_lines_density",
          "key": "duplicated_lines_density",
          "name": "duplicated_lines_density",
          "type": "INT",
        },
        "periods": undefined,
        "value": "1.0",
      },
      Object {
        "bestValue": true,
        "leak": "1",
        "metric": Object {
          "id": "new_duplicated_lines_density",
          "key": "new_duplicated_lines_density",
          "name": "new_duplicated_lines_density",
          "type": "INT",
        },
        "periods": Array [
          Object {
            "bestValue": true,
            "index": 1,
            "value": "1.0",
          },
        ],
        "value": "1.0",
      },
      Object {
        "bestValue": true,
        "metric": Object {
          "id": "duplicated_blocks",
          "key": "duplicated_blocks",
          "name": "duplicated_blocks",
          "type": "INT",
        },
        "periods": undefined,
        "value": "1.0",
      },
      Object {
        "bestValue": true,
        "metric": Object {
          "id": "ncloc",
          "key": "ncloc",
          "name": "ncloc",
          "type": "INT",
        },
        "periods": undefined,
        "value": "1.0",
      },
      Object {
        "bestValue": true,
        "metric": Object {
          "id": "ncloc_language_distribution",
          "key": "ncloc_language_distribution",
          "name": "ncloc_language_distribution",
          "type": "INT",
        },
        "periods": undefined,
        "value": "1.0",
      },
      Object {
        "bestValue": true,
        "metric": Object {
          "id": "projects",
          "key": "projects",
          "name": "projects",
          "type": "INT",
        },
        "periods": undefined,
        "value": "1.0",
      },
      Object {
        "bestValue": true,
        "metric": Object {
          "id": "lines",
          "key": "lines",
          "name": "lines",
          "type": "INT",
        },
        "periods": undefined,
        "value": "1.0",
      },
      Object {
        "bestValue": true,
        "leak": "1",
        "metric": Object {
          "id": "new_lines",
          "key": "new_lines",
          "name": "new_lines",
          "type": "INT",
        },
        "periods": Array [
          Object {
            "bestValue": true,
            "index": 1,
            "value": "1.0",
          },
        ],
        "value": "1.0",
      },
    ]
  }
  measuresHistory={
    Array [
      Object {
        "history": Array [
          Object {
            "date": "PARSED:2019-01-05",
            "value": "2.0",
          },
        ],
        "metric": "bugs",
      },
      Object {
        "history": Array [
          Object {
            "date": "PARSED:2019-01-05",
            "value": "0",
          },
        ],
        "metric": "vulnerabilities",
      },
      Object {
        "history": Array [
          Object {
            "date": "PARSED:2019-01-01",
            "value": "1.0",
          },
        ],
        "metric": "sqale_index",
      },
      Object {
        "history": Array [
          Object {
            "date": "PARSED:2019-01-02",
            "value": "1.0",
          },
        ],
        "metric": "duplicated_lines_density",
      },
      Object {
        "history": Array [
          Object {
            "date": "PARSED:2019-01-03",
            "value": "10000",
          },
        ],
        "metric": "ncloc",
      },
      Object {
        "history": Array [
          Object {
            "date": "PARSED:2019-01-04",
            "value": "95.5",
          },
        ],
        "metric": "coverage",
      },
    ]
  }
  metrics={
    Array [
      Object {
        "id": "alert_status",
        "key": "alert_status",
        "name": "alert_status",
        "type": "INT",
      },
      Object {
        "id": "quality_gate_details",
        "key": "quality_gate_details",
        "name": "quality_gate_details",
        "type": "INT",
      },
      Object {
        "id": "bugs",
        "key": "bugs",
        "name": "bugs",
        "type": "INT",
      },
      Object {
        "id": "new_bugs",
        "key": "new_bugs",
        "name": "new_bugs",
        "type": "INT",
      },
      Object {
        "id": "reliability_rating",
        "key": "reliability_rating",
        "name": "reliability_rating",
        "type": "RATING",
      },
      Object {
        "id": "new_reliability_rating",
        "key": "new_reliability_rating",
        "name": "new_reliability_rating",
        "type": "RATING",
      },
      Object {
        "id": "vulnerabilities",
        "key": "vulnerabilities",
        "name": "vulnerabilities",
        "type": "INT",
      },
      Object {
        "id": "new_vulnerabilities",
        "key": "new_vulnerabilities",
        "name": "new_vulnerabilities",
        "type": "INT",
      },
      Object {
        "id": "security_rating",
        "key": "security_rating",
        "name": "security_rating",
        "type": "RATING",
      },
      Object {
        "id": "new_security_rating",
        "key": "new_security_rating",
        "name": "new_security_rating",
        "type": "RATING",
      },
      Object {
        "id": "security_hotspots",
        "key": "security_hotspots",
        "name": "security_hotspots",
        "type": "INT",
      },
      Object {
        "id": "new_security_hotspots",
        "key": "new_security_hotspots",
        "name": "new_security_hotspots",
        "type": "INT",
      },
      Object {
        "id": "security_hotspots_reviewed",
        "key": "security_hotspots_reviewed",
        "name": "security_hotspots_reviewed",
        "type": "INT",
      },
      Object {
        "id": "new_security_hotspots_reviewed",
        "key": "new_security_hotspots_reviewed",
        "name": "new_security_hotspots_reviewed",
        "type": "INT",
      },
      Object {
        "id": "security_review_rating",
        "key": "security_review_rating",
        "name": "security_review_rating",
        "type": "RATING",
      },
      Object {
        "id": "new_security_review_rating",
        "key": "new_security_review_rating",
        "name": "new_security_review_rating",
        "type": "RATING",
      },
      Object {
        "id": "code_smells",
        "key": "code_smells",
        "name": "code_smells",
        "type": "INT",
      },
      Object {
        "id": "new_code_smells",
        "key": "new_code_smells",
        "name": "new_code_smells",
        "type": "INT",
      },
      Object {
        "id": "sqale_rating",
        "key": "sqale_rating",
        "name": "sqale_rating",
        "type": "RATING",
      },
      Object {
        "id": "new_maintainability_rating",
        "key": "new_maintainability_rating",
        "name": "new_maintainability_rating",
        "type": "RATING",
      },
      Object {
        "id": "sqale_index",
        "key": "sqale_index",
        "name": "sqale_index",
        "type": "INT",
      },
      Object {
        "id": "new_technical_debt",
        "key": "new_technical_debt",
        "name": "new_technical_debt",
        "type": "INT",
      },
      Object {
        "id": "coverage",
        "key": "coverage",
        "name": "coverage",
        "type": "PERCENT",
      },
      Object {
        "id": "new_coverage",
        "key": "new_coverage",
        "name": "new_coverage",
        "type": "PERCENT",
      },
      Object {
        "id": "lines_to_cover",
        "key": "lines_to_cover",
        "name": "lines_to_cover",
        "type": "INT",
      },
      Object {
        "id": "new_lines_to_cover",
        "key": "new_lines_to_cover",
        "name": "new_lines_to_cover",
        "type": "INT",
      },
      Object {
        "id": "tests",
        "key": "tests",
        "name": "tests",
        "type": "INT",
      },
      Object {
        "id": "duplicated_lines_density",
        "key": "duplicated_lines_density",
        "name": "duplicated_lines_density",
        "type": "INT",
      },
      Object {
        "id": "new_duplicated_lines_density",
        "key": "new_duplicated_lines_density",
        "name": "new_duplicated_lines_density",
        "type": "INT",
      },
      Object {
        "id": "duplicated_blocks",
        "key": "duplicated_blocks",
        "name": "duplicated_blocks",
        "type": "INT",
      },
      Object {
        "id": "ncloc",
        "key": "ncloc",
        "name": "ncloc",
        "type": "INT",
      },
      Object {
        "id": "ncloc_language_distribution",
        "key": "ncloc_language_distribution",
        "name": "ncloc_language_distribution",
        "type": "INT",
      },
      Object {
        "id": "projects",
        "key": "projects",
        "name": "projects",
        "type": "INT",
      },
      Object {
        "id": "lines",
        "key": "lines",
        "name": "lines",
        "type": "INT",
      },
      Object {
        "id": "new_lines",
        "key": "new_lines",
        "name": "new_lines",
        "type": "INT",
      },
    ]
  }
  onGraphChange={[Function]}
  projectIsEmpty={false}
  qgStatuses={
    Array [
      Object {
        "failedConditions": Array [
          Object {
            "actual": "2",
            "error": "1.0",
            "level": "ERROR",
            "measure": Object {
              "bestValue": true,
              "leak": "1",
              "metric": Object {
                "id": "new_bugs",
                "key": "new_bugs",
                "name": "new_bugs",
                "type": "INT",
              },
              "periods": Array [
                Object {
                  "bestValue": true,
                  "index": 1,
                  "value": "1.0",
                },
              ],
              "value": "1.0",
            },
            "metric": "new_bugs",
            "op": "GT",
            "period": 1,
          },
          Object {
            "actual": "5",
            "error": "2.0",
            "level": "ERROR",
            "measure": Object {
              "bestValue": true,
              "metric": Object {
                "id": "bugs",
                "key": "bugs",
                "name": "bugs",
                "type": "INT",
              },
              "periods": undefined,
              "value": "1.0",
            },
            "metric": "bugs",
            "op": "GT",
            "period": 0,
          },
        ],
        "ignoredConditions": false,
        "key": "foo",
        "name": "Foo",
        "status": "ERROR",
      },
    ]
  }
/>
`;
